<resources>
    <string name="app_name">NewsCopy</string>
    <string name="bt_next">Next</string>
    <string name="bt_previous">Previous</string>
    <string name="textTitle">Do you to learn image edition</string>
    <string name="textData">11/03/2022</string>
    <string name="textAuthor">Gabriel Nobrega</string>
    <string name="textContent">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Nam pellentesque, lectus a semper finibus, massa massa euismod purus, sed egestas sapien leo vel justo.
        Pellentesque vitae libero at massa lacinia malesuada. Aenean at pellentesque dolor, sed condimentum risus.
        Nulla efficitur magna sed finibus feugiat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae;
        Ut id tellus porta, faucibus odio in, condimentum erat. Pellentesque a sapien risus. Vestibulum molestie, lectus ut gravida gravida,
        metus urna imperdiet odio, sed molestie arcu libero quis lectus. Mauris non ipsum ut sapien blandit semper.

        Cras accumsan nisi eget dolor varius, eu gravida quam ornare. Pellentesque gravida turpis at orci vulputate, in placerat neque egestas.
        Pellentesque vulputate ut quam facilisis luctus. Fusce porta, augue eget imperdiet malesuada, lectus mauris consequat neque, non accumsan nisi urna eget neque.
        In sed lectus eget nisl lacinia mollis. Nulla facilisi. Mauris malesuada mattis accumsan. Proin scelerisque massa at sem iaculis varius.
        Integer non nisi pharetra, lacinia diam non, venenatis ligula. Praesent suscipit, orci in posuere ornare, ante leo maximus dui, et commodo mauris nunc sed dui.
        Aliquam interdum, orci id convallis fringilla, tortor purus tempor lectus, vel lobortis elit odio sed sem. Nullam feugiat mollis arcu, et aliquet massa consequat eu.
        Mauris ut mi viverra, tincidunt nibh imperdiet, convallis nibh. In hac habitasse platea dictumst.

        Aliquam posuere sit amet dolor non ultrices. Aenean iaculis blandit convallis. Fusce arcu eros, convallis id vulputate rutrum, tempus nec erat.
        Curabitur sed eros vel elit vehicula tristique quis id augue. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae;
        Sed aliquet odio fringilla aliquet sollicitudin. Pellentesque quis aliquet leo.

        Etiam vulputate aliquet justo a consequat. Nunc est lorem, dapibus nec sodales at, feugiat et sapien. Sed id tristique massa.
        Cras gravida neque quis leo elementum elementum. Maecenas vitae fringilla massa. Vivamus iaculis arcu a dui pharetra, a egestas enim faucibus.
        Morbi dapibus lectus felis, quis tristique metus finibus id. Morbi porttitor mauris vel arcu lacinia consequat. Nullam aliquam tristique quam ac accumsan.
        Integer scelerisque ullamcorper efficitur.
    </string>

</resources>
